--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@800&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
      <header>
@@ -103,7 +104,15 @@
         </div>
     </div>
 
-    <footer></footer>
+    <div class="footer">
+        <div class="footer-logo">My Jobs</div>
+        <h3>Subscribe to get latest job post</h3>
+        <p> &copy 2020</p>
+        <div class="newsletter">
+            <input type="text" class="input" placeholder="your email">
+            <button>SUBSCRIBE</button>
+        </div>
+    </div>
 
      <script>
         window.addEventListener('scroll', function(){
