--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
         </div>
     </div>
 
-    <footer></footer>
+    <footer>
+        <div class="footer">
+            <div class="footer-logo">My Jobs</div>
+            <h3>Subscribe to get latest job post</h3>
+            <p> &copy 2020</p>
+            <div class="newsletter">
+            <input type="text" class="input" placeholder="your email">
+            <button>SUBSCRIBE</button>
+            </div>
+        </div> 
+    </footer>
 
      <script>
         window.addEventListener('scroll', function(){
